# MultiGrid

./: .gitignore  CMakeLists.txt  Final project 662 - Spring 2018.xlsx  Input.mat  MGTester.m  MGTester.m~  main.cpp  profile.txt
DTSource/: DTArguments.cpp  DTArguments.h  DTArray.h  DTArrayRegionTemplates.h  DTCharArray.cpp  DTCharArray.h  DTCharArrayRegion.cpp  DTCharArrayRegion.h  DTDataContainer.cpp  DTDataContainer.h  DTDataFile.cpp  DTDataFile.h  DTDoubleArray.cpp  DTDoubleArray.h  DTDoubleArrayRegion.cpp  DTDoubleArrayRegion.h  DTDoubleComplexArray.cpp  DTDoubleComplexArray.h  DTError.cpp  DTFile.cpp  DTFloatArray.cpp  DTFloatArrayRegion.cpp  DTFloatArrayRegion.h  DTFunction.cpp  DTFunction.h  DTFunction1D.cpp  DTFunction1D.h  DTFunction2D.cpp  DTFunction2D.h  DTIndex.cpp  DTIndex.h  DTIntArray.cpp  DTIntArray.h  DTIntArrayOperators.cpp  DTIntArrayOperators.h  DTIntArrayRegion.cpp  DTIntArrayRegion.h  DTList.h  DTLiveUpdate.cpp  DTLiveUpdate.h  (+45 more)
